
## [Unreleased]

## Added

- Adicionado qualidade para plantações: Plantas Precárias, Plantas e Plantas Premium. Plantas premium e precárias tem uma mudança em seu preço de 30%.
- Adicionado categorias para as plantações de fazendinha: Grão, Raiz, Vegetal, Fruta, Fruta Nobre e Especial.
- Criado o comando `/fazendinha administrar`, que integra gerenciar campos, silo e feira.

## Changed

- Ajustado os pesos minimos e máximos de plantações da fazendinha.
- A `/loja vender plantas` foi atualizada para os novos componentes V2 do Discord! Agora também é possível vender diferentes qualidades de plantas.
- O `/fazendinha plantações` foi atualizado para os novos componentes V2 do Discord. Agora também é possível plantar e colher todos os campos ao mesmo tempo - Sugerido por @mareys.
- O `/fazendinha silo` foi atualizado para os novos componentes V2 do Discord.
- O `/fazendinha entregas` foi atualizado para os novos componentes V2 do Discord.
- O `/fazendinha feira comprar` foi atualizado para os novos componentes V2 do Discord.
- O `/loja comprar sementes` foi atualizado para os novos componentes V2 do Discord.
- O `/cooldowns` foi atualizado para os novos componentes V2 do Discord.
- A planta `Tomate` foi renomeada para `Feijão`.
- A planta `Banana` foi renomeada para `Cebola`.
- A planta `Limão` foi renomeada para `Mirtilo`. 
- A planta `Melancia` foi renomeada para `Limão`.
- As plantas `Morango` e `Maçã` tiveram suas posições de raridade alteradas.
- Facilitado o uso do `/fazendinha feira anunciar`, removendo a necessidade de usar acentos para buscar por platnas.

## Fixed

- Corrigido os itens mágicos ainda aparecerem na loja para serem comprados, mesmo já tendo eles - Reportado por @mareys.

### Removed

- Removido o comando `/fazendinha administrar silo`.
- Removido o comando `/fazendinha administrar campos`.
- Removido o comando `/fazendinha administrar feira`.

## [6.1.5] - 2025-12-17

### Fixed

- Corrigido erro ao colher plantações, por conta de silo cheio.
